--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "postcss-axis": "^0.1.2",
+        "swiper": "^7.4.1",
         "uikit": "^3.10.0"
     }
 }
